--- a/src/interfaz/principal.form
+++ b/src/interfaz/principal.form
@@ -80,14 +80,14 @@
           <SubComponents>
             <Component class="javax.swing.JButton" name="cmdGuardar">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Guardar"/>
+                <Property name="text" type="java.lang.String" value="Guardar Contrase&#xf1;a"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmdGuardarActionPerformed"/>
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="70" width="90" height="30"/>
+                  <AbsoluteConstraints x="10" y="70" width="190" height="30"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -110,14 +110,14 @@
             </Component>
             <Component class="javax.swing.JButton" name="cmdGuardarNueva">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Guardar"/>
+                <Property name="text" type="java.lang.String" value="Guardar Nueva Contrase&#xf1;a"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmdGuardarNuevaActionPerformed"/>
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="150" width="90" height="30"/>
+                  <AbsoluteConstraints x="10" y="150" width="190" height="30"/>
                 </Constraint>
               </Constraints>
             </Component>
